[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/RacingGame/Car.png" type="Texture" id=1]
[ext_resource path="res://RacingGame/Car.gd" type="Script" id=2]
[ext_resource path="res://Assets/RacingGame/SFX/drive.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/RacingGame/SFX/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/RacingGame/SFX/fuel.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.2444
height = 21.669

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.23015
height = 22.713

[node name="Car" type="KinematicBody2D"]
collision_mask = 19
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.174896 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 24, 0 )
shape = SubResource( 2 )

[node name="gameTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="Drive" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 3 )
volume_db = -80.0
max_distance = 14681.0
attenuation = 1e-05
bus = "SFX"

[node name="Hit" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 4 )
attenuation = 1e-05
bus = "SFX"

[node name="Fuel" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 5 )
volume_db = 12.866
attenuation = 1e-05
bus = "SFX"

[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_CollisionArea_body_exited"]
[connection signal="timeout" from="gameTimer" to="." method="_on_gameTimer_timeout"]
